his 1: Post 약수 알고리즘(Divisor Algorithm) Fix author.html

--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,7 +1,7 @@
 <section class="author">
   <div class="authorimage box" style="background: url({{site.baseurl}}/assets/img/nhouyng.jpg)"></div>
   <div class="authorinfo box">
-    <p>Author | Jonghoon Lee</p>
+    <p>Author | nhouyng</p>
     <p class="bio">
       Bachelor of Computer Engineering at Chungnam National University.
     </p>
